# gdb-multiarch-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gdb_multiarch_mcp/: __init__.py  __main__.py  gdb_interface.py  server.py
src/gdb_multiarch_mcp/scripts/: gdbinit_switch
